# crux

./: .hgempty  .hgignore  release
crux/: COPYING  INSTALL  Makefile.in  README  VERSION  autogen.sh  cfg.in  configure.ac  cydep.in  cython.in  pickles.crux  pickles.cx  setup.py.in
crux/NotInstalled/: NotInstalled.py.in
crux/examples/: lnL_max.cx  simulate.cx  tree2dist.cx
crux/include/: CxNexusParser.h  CxPpc.h  CxQri.h  CxRi.h  CxTree.h  _cruxmodule.h
crux/include/Crux/: CxDistMatrixNj.h  CxMt.h  CxTreeCanonize.h  CxTreeNni.h  CxXep.h  _cruxmodule_defs.h.in
crux/lib/: Cx.c  Cx.h  Cx.pxd  CxAmd64.c  CxIa32.c  CxLapack.h  CxMat.c  CxMat.h  CxMat.pxd  CxMath.pxd  CxMq.h  CxNewickLexer.l  CxRi.c  CxRi.h  CxRi.pxd  Cx_defs.h.in  atlas.pxd  libc.pxd  libm.pxd
crux/lib/Crux/: Cx.h  CxIa32.h  CxMat.pxd  CxMath.pxd  CxMq.c  CxNewickLexer.l  CxNewickLexer.pxd  CxPpc.c  CxRi.c  CxRi.h  CxRi.pxd  Cx_defs.h.in
crux/lib/Crux/DistMatrix/: CxDistMatrixLexer.l  CxDistMatrixLexer.pxd
crux/lib/Crux/Tree/: CxLik.c  CxLik.h  CxLik.pxd
crux/lib/DistMatrix/: CxDistMatrix.c  CxDistMatrix.h  CxDistMatrix.pxd  CxDistMatrixLexer.l  CxDistMatrixLexer.pxd  CxDistMatrixNj.c  CxDistMatrixNj.h  CxDistMatrixNj.pxd
crux/lib/SFMT/: SFMT-alti.h  SFMT-sse2.h  SFMT.c  SFMT.h  SFMT.pxd
crux/lib/Tree/: CxLik.c  CxLik.h  CxLik.pxd
crux/pkg/: Parsing.pyx
crux/pkg/Crux/: CTMatrix.pxd  CTMatrix.py  CTMatrix.pyx  Character.pxd  Character.pyx  CharacterType.py  Config.py  Copying.py  DistMatrix.py  Fasta.pxd  Fasta.pyx  JobQ.pyx  Mc3.pxd  Mc3.pyx  Newick.pxd  Newick.pyx  NexusParser.py  NexusParserBlock.py  NexusParserFile.py  NexusParserSeparator.py  NexusParserStatement.py  NexusParserSyntaxError.py  NexusParserWord.py  Node.py  Taxa.pxd  Taxa.pyx  TaxonMap.py  Tree.pxd  Tree.py  Tree.pyx  __init__.pxd  __init__.py  __init__.pyx
crux/pkg/Crux/DistMatrix/: Nj.pxd  Nj.pyx  __init__.pxd  __init__.pyx
crux/pkg/Crux/Mc3/: Chain.pxd  Chain.pyx  Post.pxd  Post.pyx  __init__.pxd  __init__.pyx
crux/pkg/Crux/Tree/: Bipart.pxd  Bipart.pyx  Lik.pxd  Lik.pyx  Rf.pxd  Rf.pyx  Sumt.pxd  Sumt.pyx  __init__.pxd  __init__.pyx
crux/pkg/crux/: CTMatrix.py  NexusParser.py  NexusParserBase.py  NexusParserBlock.py  TaxonMap.py  __init__.py.in
crux/src/: CxAmd64.c  CxDistMatrixNj.c  CxFastaParser.c  CxIa32.c  CxMem.c  CxMt.c  CxNexusParser.c  CxRi.c  CxTree.c  CxTreeCollapse.c  CxTreeMp.c  CxTreeNni.c  CxTreeRf.c  Parsing.pxd  Parsing.pyx
crux/src/Crux/: CTMatrix.pxd  CTMatrix.pyx  Character.pxd  Character.pyx  CharacterType.pxd  CharacterType.pyx  Config.py.in  Cx.h  Cx.pxd  CxAmd64.c  CxAmd64.h  CxDistMatrix.c  CxDistMatrix.h  CxDistMatrix.pxd  CxFastaParser.c  CxIa32.c  CxMem.c  CxMt.c  CxNewickParser.c  CxNexusParser.c  CxPpc.h  CxRi.c  CxTreeCanonize.c  CxTreeNni.c  CxTreeTbr.c  DistMatrix.pxd  DistMatrix.pyx  Exception.py  Fasta.pxd  Fasta.pyx  FastaParser.pxd  FastaParser.pyx  Newick.pxd  Newick.pyx  Newick.pyx.in  NewickParser.pxd  NewickParser.pyx  Taxa.pxd  Taxa.pyx  TaxonMap.pxd  (+5 more)
crux/src/Crux/_Crux/: CxAmd64.c  CxDistMatrixNj.c  CxPpc.c  CxTr.c  CxTree.c  CxTreeCollapse.c  CxTreeMp.c  CxTreeRf.c  CxXep.c  _cruxmodule.c  asprintf_c
crux/src/Parsing/: Parsing.pyx
crux/test/: Alignment_a.cx  Alignment_a.cx.exp  CTMatrix_a.crux  CTMatrix_a.crux.exp  CTMatrix_a.cx  CTMatrix_b.crux  CTMatrix_b.cx  CTMatrix_c.cx  CTMatrix_c.cx.exp  CTMatrix_d.cx  CTMatrix_e.cx  CTMatrix_e.cx.exp  CharacterType_a.crux  CharacterType_a.crux.exp  Character_a.crux  Character_a.crux.exp  Character_a.cx  Character_a.cx.exp  DistMatrix_a.crux  DistMatrix_a.crux.exp  DistMatrix_a.cx  DistMatrix_a.cx.exp  FastaParser_a.crux  Fasta_a.crux  Fasta_a.crux.exp  Fasta_a.cx  Fasta_a.cx.exp  Lik_a.cx  Lik_a.cx.exp  Lik_b.cx  Lik_b.cx.exp  Lik_c.cx  Lik_c.cx.exp  Lik_d.cx  Lik_d.cx.exp  Lik_e.cx  Lik_e.cx.exp  Lik_f.cx  Lik_f.cx.exp  Lik_g.cx  (+126 more)
doc/: notes  todo
trunk/crux/: COPYING  Makefile.in  README  configure.ac  configure.in  crux.in
trunk/crux/include/: CxAmd64.h  CxCTMatrix.h  CxDistMatrix.h  CxFastaParser.h  CxIa32.h  CxMem.h  CxMt.h  CxNewickParser.h  CxQli.h  CxQr.h  CxQri.h  CxRi.h  CxTr.h  CxTree.h  CxTreeCanonize.h  CxTreeCollapse.h  CxTreeMp.h  CxTreeNj.h  CxTreeRf.h  CxTreeTbr.h  CxXep.h  _cruxmodule.h  _cruxmodule_defs.h.in
trunk/crux/src/: CxCTMatrix.c  CxDistMatrix.c  CxDistMatrixNj.c  CxFastaParser.c  CxIa32.c  (+16 more)
trunk/cruxroot/crux/: INSTALL  Makefile.in  PLATFORMS  configure.in  crux.in  setup.py.in
trunk/cruxroot/crux/include/: CxDistMatrix.h  CxFastaParser.h  CxMem.h  CxQli.h  CxQr.h  CxQri.h  CxTr.h  CxTree.h  CxTreeCanonize.h  CxTreeMp.h  CxTreeNj.h  CxTreeTbr.h  CxXep.h  _cruxmodule.h  _cruxmodule_defs.h.in  bhp.h  ia32.h  mem.h  qli.h  qr.h  qri.h  tr.h  tree.h  tree_canonize.h  tree_mp.h  tree_nj.h  tree_tbr.h  xep.h
trunk/cruxroot/crux/pkg/crux/: CTMatrix.py  CharacterType.py  DistMatrix.py  Edge.py  Exception.py  FastaParser.py  NewickParser.py  Node.py  Ring.py  TaxonMap.py  Tree.py  __init__.py.in  dist_matrix.py  edge.py  node.py  taxon_map.py  tree.py
trunk/cruxroot/crux/pkg/dist_matrix/: __init__.py  dist_matrix.py  dist_matrix_a.exp  dist_matrix_a.py
trunk/cruxroot/crux/pkg/newick/: __init__.py  newick.py  newick_a.py  newick_b.py
trunk/cruxroot/crux/src/: CxDistMatrix.c  CxFastaParser.c  CxIa32.c  CxMem.c  CxTr.c  CxTree.c  CxTreeCanonize.c  CxTreeMp.c  CxTreeNj.c  CxTreeTbr.c  CxXep.c  _cruxmodule.c  asprintf_c  bhp.c  ia32.c  mem.c  tr.c  tree.c  tree_canonize.c  tree_mp.c  tree_nj.c  tree_tbr.c  xep.c
trunk/cruxroot/crux/test/: CTMatrix_a.py  CTMatrix_a.py.exp  CTMatrix_b.py  CTMatrix_b.py.exp  CharacterType_a.py  CharacterType_a.py.exp  DistMatrix_a.py  DistMatrix_a.py.exp  FastaParser_a.py  FastaParser_a.py.exp  NewickParser_a.py  NewickParser_a.py.exp  NewickParser_b.py  NewickParser_b.py.exp  TaxonMap_a.py  TaxonMap_a.py.exp  dist_matrix_a.py  dist_matrix_a.py.exp  newick_a.py  newick_a.py.exp  newick_b.py  nj_a.py  nj_a.py.exp  taxon_map_a.py  taxon_map_a.py.exp  template  treezilla.dist  treezilla.fasta  verify.in
trunk/doc/: notes  todo
trunk/scripts/: record.crux
(+58 files in other folders)
